Fix background, adjust main content, and correct scrollbar functionality

--- a/frontend/src/components/AuthForm.css
+++ b/frontend/src/components/AuthForm.css
@@ -106,7 +106,7 @@
     margin-top: 5px;
     width: fit-content;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    font-size: 15px;
+    font-size: 12px; /* Schriftgröße angepasst */
     font-family: 'Trebuchet MS', sans-serif;
     font-weight: 200;
     backdrop-filter: blur(10px);
@@ -217,18 +217,18 @@
 }
 
 .main-content {
-    margin-top: 120px; /* Abstand unter der Navbar */
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start; /* Starten Sie den Inhalt am Anfang */
     width: 80%;
     max-width: 800px;
+    margin: auto;
     text-align: center;
     padding-right: 20px;
     padding-bottom: 20px;
     padding-left: 0;
-    margin: auto;
+    margin-top: 120px; /* Abstand unter der Navbar */
     overflow-y: auto; /* Ermöglicht Scrollen im main-content */
     height: calc(100vh - 120px); /* Höhe anpassen, um Platz für Navbar zu lassen */
 }
